--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main>
         <section class="about secondary-background">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a 
+            <p class="section-description">I, m a web designer & developer with a 
                 passion for web design. I enjoy developing simple, clean and
                  slick websites that provide real value to the end user.
                   Thousands of clients have procured exceptional
